# stockit-backend

./: .gitignore  Cargo.toml  README.md  stockit.db  teste.ts
migrations/2024-04-20-144052_create_address/: up.sql
migrations/2024-04-20-144109_create_user/: up.sql
migrations/2024-04-20-144116_create_employee/: up.sql
migrations/2024-04-20-144125_create_salary_history/: down.sql  up.sql
migrations/2024-04-20-144133_create_comission_history/: down.sql  up.sql
migrations/2024-04-20-144438_create_payment/: down.sql  up.sql
migrations/2024-04-20-144743_create_client/: down.sql  up.sql
migrations/2024-04-20-145219_create_provider/: up.sql
migrations/2024-07-11-001218_create_unit/: down.sql  up.sql
migrations/2024-07-11-001800_create_role/: down.sql  up.sql
migrations/2024-07-11-001854_create_producer/: down.sql  up.sql
migrations/2024-07-11-001943_create_address/: down.sql  up.sql
migrations/2024-07-11-002326_create_client_user/: down.sql  up.sql
migrations/2024-07-11-005526_create_provider/: down.sql  up.sql
migrations/2024-07-11-012045_create_product/: up.sql
migrations/2024-07-11-012605_create_product_price/: down.sql  up.sql
migrations/2024-07-11-012714_create_product_nfe/: down.sql  up.sql
migrations/2024-07-11-014711_create_user/: up.sql
migrations/2024-07-11-015230_create_employee/: down.sql  up.sql
src/: lib.rs  schema.rs
src/connection/: mod.rs
src/models/: address.rs  client.rs  client_user.rs  comission_history.rs  employee.rs  mod.rs  payment.rs  producer.rs  product.rs  product_nfe.rs  product_price.rs  provider.rs  role.rs  (+3 more)
(+16 files in other folders)
